Fixed some custom fonts being too big to display KDA stats in a single line in match history

--- a/data/assets/Css/ISAKV1.css
+++ b/data/assets/Css/ISAKV1.css
@@ -1045,5 +1045,9 @@ div[data-screen-name="rcp-fe-lol-tft"] .tft-sub-nav-container {
 #pandoru {
 	margin-bottom: 17px;
 }
+
+.player-history-stats-kills {
+	width: auto !important;
+}
 /*_________________________________________________________________________________________________________________________________*/
 /* End */
